# 2D-Game-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Engine/: ArtemisEngine.cpp  ArtemisEngine.h  BoxCollider.h  FontManager.cpp  FontManager.h  GameObject.cpp  GameObject.h  Input.cpp  Input.h  MonoBehaviour.h  Physics.cpp  Physics.h  RigidBody.cpp  RigidBody.h  Sprite.cpp  Sprite.h  SpriteManager.cpp  SpriteManager.h  Text.cpp  Text.h  TextureManager.cpp  TextureManager.h  Time.h  Transform.cpp  Transform.h  Vector2.cpp  Vector2.h  main.cpp
Engine/Base/: ArtemisEngine.cpp  ArtemisEngine.h  Color.cpp  Color.h  Component.cpp  Component.h  Debug.cpp  Debug.h  Engine.cpp  Engine.h  Event.cpp  Event.h  FontManager.cpp  FontManager.h  GameObject.cpp  GameObject.h  GameTime.cpp  GameTime.h  Input.cpp  Input.h  MonoBehaviour.cpp  MonoBehaviour.h  Physics.cpp  Physics.h  Random.cpp  Random.h  Sprite.cpp  Sprite.h  SpriteManager.cpp  SpriteManager.h  Text.cpp  Text.h  TextureManager.cpp  TextureManager.h  Time.cpp  Time.h  Transform.cpp  Transform.h  Vector2.cpp  Vector2.h
Engine/Components/: BoxCollider.cpp  BoxCollider.h  RigidBody.cpp  RigidBody.h  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h
Game/: AssetLoader.cpp  Game.cpp  GameManager.cpp  GameManager.h
Game/Enteties/: EnemyShip.cpp  EnemyShip.h  Laser.cpp  Laser.h  Platform.cpp  Platform.h  PlayerShip.cpp  PlayerShip.h  Ship.cpp  Ship.h
Game/Entities/: EnemyShip.cpp  EnemyShip.h  Laser.h  PlayerShip.cpp  Ship.h
docs/: README.md
